--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -8,16 +8,27 @@ body {
 }
 
 .section-wrap {
-	padding: 94px 0;
+	padding: 60px 0;
+
+	@media screen and (min-width: $bp-desktop) {
+		padding: 94px 0;
+	}
 }
 
 .section-title {
-	margin: 0 0 50px 0;
-	font-weight: 700;
-	font-size: 36px;
-	line-height: 1.2;
 	text-align: center;
+	font-weight: 700;
 	letter-spacing: 0.03em;
+	font-size: 28px;
+	line-height: 1.17;
+	margin: 0 0 30px 0;
+
+	@media screen and (min-width: $bp-desktop) {
+		margin: 0 0 50px 0;
+		font-size: 36px;
+		line-height: 1.2;
+		letter-spacing: 0.03em;
+	}
 }
 
 .is-hidden {
