--- a/sass/base/_container.scss
+++ b/sass/base/_container.scss
@@ -4,16 +4,16 @@
 
 	@media screen and (min-width: $bp-mobile) {
 		width: 480px;
-		background-color: red;
+		// background-color: red;
 	}
 
 	@media screen and (min-width: $bp-tablet) {
 		width: 768px;
-		background-color: green;
+		// background-color: green;
 	}
 
 	@media screen and(min-width: $bp-desktop) {
 		width: 1200px;
-		background-color: blue;
+		// background-color: blue;
 	}
 }
