--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -9,12 +9,37 @@
 	padding: 60px 0;
 	background-color: var(--background-footer-color);
 
+	&--flex {
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		gap: 60px;
+		flex-direction: column;
+
+		@media screen and (min-width: $bp-tablet) {
+			align-items: baseline;
+			justify-content: space-around;
+			flex-direction: row;
+			flex-wrap: wrap;
+		}
+
+		@media screen and (min-width: $bp-desktop) {
+			align-items: baseline;
+			gap: 94px;
+		}
+	}
+
 	&__logo {
-		display: inline-block;
+		text-align: center;
+		display: block;
 		margin-bottom: 20px;
+		@media screen and (min-width: $bp-desktop) {
+			text-align: left;
+		}
 	}
 
 	&__address-place {
+		text-align: center;
 		display: inline-block;
 		color: var(--logo-color-footer);
 		font-size: 14px;
@@ -25,6 +50,10 @@
 		transition-duration: 250ms;
 		transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
+		@media screen and (min-width: $bp-desktop) {
+			text-align: left;
+		}
+
 		&:hover,
 		&:focus {
 			color: var(--logo-color-main);
@@ -34,14 +63,19 @@
 	&__address-list:not(:last-child) {
 		margin-bottom: 9px;
 	}
+
+	&__address-link {
+		text-align: center;
+		display: block;
+
+		@media screen and (min-width: $bp-desktop) {
+			display: inline-block;
+		}
+	}
+
 	&__address-link:hover,
 	&__address-link:focus {
 		color: var(--logo-color-main);
-	}
-	&--flex {
-		display: flex;
-		gap: 94px;
-		align-items: baseline;
 	}
 
 	&__list-icon {
@@ -50,13 +84,18 @@
 	}
 
 	&__subtitle {
-		margin: 0 0 20px 0;
+		text-align: center;
 		color: var(--logo-color-footer);
 		font-weight: 700;
 		font-size: 14px;
 		line-height: 1.1;
 		letter-spacing: 0.03em;
 		text-transform: uppercase;
+		margin: 0 0 20px 0;
+
+		@media screen and (min-width: $bp-desktop) {
+			text-align: left;
+		}
 	}
 	&__icons {
 		width: 44px;
@@ -79,11 +118,17 @@
 
 	&__form-container {
 		display: flex;
-		gap: 10px;
+		gap: 20px;
+		flex-direction: column;
+
+		@media screen and (min-width: $bp-desktop) {
+			gap: 10px;
+			flex-direction: row;
+		}
 	}
 
 	&__input {
-		width: 358px;
+		width: 450px;
 		height: 50px;
 		padding: 15px 16px;
 		border-color: rgba(255, 255, 255, 0.3);
@@ -92,6 +137,10 @@
 		filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
 		outline: none;
 		color: rgba(255, 255, 255, 0.6);
+
+		@media screen and (min-width: $bp-desktop) {
+			width: 358px;
+		}
 
 		&:hover,
 		&:focus {
@@ -107,12 +156,12 @@
 	}
 
 	&__button-submit {
-		display: flex;
-		align-items: center;
-		text-align: center;
 		padding: 10px 28px;
 		height: 50px;
 		width: 200px;
+		display: flex;
+		align-items: center;
+		text-align: center;
 		box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 		border-radius: 4px;
 		background-color: var(--logo-color-main);
@@ -123,6 +172,11 @@
 		letter-spacing: 0.06em;
 		border: none;
 		outline: none;
+		margin: 0 auto;
+
+		@media screen and (min-width: $bp-desktop) {
+			margin: 0;
+		}
 	}
 
 	&__send-button {
