--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -9,13 +9,21 @@
 	border-bottom: 1px solid #ececec;
 
 	&__logo {
-		padding: 24px 0 25px 0;
+		padding: 16px 16px;
+		@media (min-width: $bp-tablet) {
+			padding: 26px 0 25px 0;
+		}
+		@media (min-width: $bp-desktop) {
+			padding: 24px 0 25px 0;
+		}
 	}
 
 	&__container {
-		display: flex;
-		align-items: center;
-		justify-content: space-between;
+		@media (min-width: $bp-tablet) {
+			display: flex;
+			align-items: center;
+			justify-content: space-between;
+		}
 	}
 
 	&__nav {
@@ -86,7 +94,7 @@
 		@media (min-width: $bp-tablet) {
 			display: flex;
 			flex-direction: column;
-			align-items: center;
+			align-items: start;
 			gap: 10px;
 		}
 		@media (min-width: $bp-desktop) {
