--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -6,47 +6,52 @@
 /* Main section */
 
 .hero {
+	padding: 118px 0;
 	background-image: linear-gradient(
 			0deg,
 			rgba(47, 48, 58, 0.4),
 			rgba(47, 48, 58, 0.4)
 		),
 		url("../images/img.jpg");
-	padding: 200px 0;
+
 	background-size: cover;
 	background-position: center;
-	max-width: 1600px;
 	margin: 0 auto;
 	background-repeat: no-repeat;
 	text-align: center;
+
+	@media screen and (min-width: $bp-desktop) {
+		max-width: 1600px;
+		padding: 200px 0;
+	}
 
 	&__title {
 		color: var(--logo-color-footer);
 		font-family: "Roboto";
 		font-weight: 900;
-		font-size: 44px;
-		line-height: 1.4;
-		margin-top: 0;
-		margin-bottom: 30px;
 		letter-spacing: 0.06em;
 		text-transform: uppercase;
+		margin-top: 0;
+		margin-bottom: 30px;
+		font-size: 26px;
+		line-height: 1.61;
 
-		@media (max-width: 767px) {
-			font-size: 26px;
-			line-height: 1.61;
+		@media screen and (min-width: $bp-desktop) {
+			font-size: 44px;
+			line-height: 1.4;
 		}
 	}
 	&__wrap {
-		max-width: 696px;
+		max-width: 360px;
 		margin-left: auto;
 		margin-right: auto;
 
-		@media (max-width: 767px) {
-			max-width: 360px;
+		@media screen and (min-width: $bp-desktop) {
+			max-width: 696px;
 		}
 	}
 	&__button {
-		padding: 10px 32px;
+		padding: 10px 24px;
 		background-color: var(--logo-color-main);
 		color: var(--logo-color-footer);
 		font-weight: 700;
@@ -61,14 +66,14 @@
 		transition-duration: 250ms;
 		transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
+		@media screen and (min-width: $bp-desktop) {
+			padding: 10px 32px;
+		}
+
 		&:hover,
 		&:focus {
 			background-color: var(--hero-button-hover);
 			box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-		}
-
-		@media (max-width: 767px) {
-			padding: 10px 24px;
 		}
 	}
 }
