--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -11,23 +11,40 @@
 	&__img {
 		display: block;
 	}
-	&__card {
-		box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-			0px 2px 1px rgba(0, 0, 0, 0.2);
-		border-radius: 0px 0px 4px 4px;
-	}
+
 	&__list {
 		display: flex;
 		gap: 30px;
 		flex-wrap: wrap;
-		flex-direction: column;
+	}
+
+	&__card {
+		box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+			0px 2px 1px rgba(0, 0, 0, 0.2);
+		border-radius: 0px 0px 4px 4px;
+		width: 450px;
+		height: 622px;
+
 		@media (min-width: $bp-tablet) {
-			flex-direction: row;
+			width: 354px;
+			height: 536px;
+		}
+		@media (min-width: $bp-desktop) {
+			width: 270px;
+			height: 428px;
 		}
 	}
+
 	&__group {
-		padding: 30px;
 		background-color: var(--logo-color-footer);
+		padding: 24px 122px;
+
+		@media (min-width: $bp-tablet) {
+			padding: 24px 74px;
+		}
+		@media (min-width: $bp-desktop) {
+			padding: 30px 32px;
+		}
 	}
 	&__name {
 		margin: 0 0 10px 0;
@@ -46,11 +63,11 @@
 		letter-spacing: 0.03em;
 	}
 	&__social-icon {
-		display: flex;
-		align-items: center;
-		padding: 12px;
 		width: 44px;
 		height: 44px;
+		padding: 12px;
+		display: flex;
+		align-items: center;
 		gap: 10px;
 		fill: var(--icon-default-color);
 		border-radius: 50%;
